# libqsolid

./: CMakeLists.txt  HEAD
cmake/: Qt4Macros.cmake
